fixed a z-index problem which was inhibiting clicks

--- a/styles.css
+++ b/styles.css
@@ -145,7 +145,7 @@ input[type=number] {
   flex-direction: column;
   position: fixed;
   margin: 1rem;
-  z-index: -300000;
+  z-index: 300000;
 }
 
 .stackCard {
